[package]
name = "pcon"
version = "0.1.0"
authors = ["Pierre Marijon <pierre@marijon.fr>"]
edition = "2021"
description = "Prompt COuNter, a short kmer counter."
rust-version = "1.65"

homepage = "https://github.com/natir/pcon"
repository = "https://github.com/natir/pcon"
documentation = "https://natir.github.io/pcon/pcon"

readme = "Readme.md"
license-file = "LICENSE"


[dependencies]
# CLI management
clap           = { version = "3", features = ["derive"] }


# Error management
thiserror      = { version = "1" }
anyhow         = { version = "1"}


# Logging and error management
log            = { version = "0.4" }
stderrlog      = { version = "0.4" }
[dev-dependencies]
criterion      = { version = "0.3" }

[profile.release]
lto = 'thin'
opt-level = 3
overflow-checks = false
panic = 'abort'
incremental = false


[profile.profiling]
inherits = "release"
debug = true