[package]
name = "pcon"
version = "0.1.0"
authors = ["Pierre Marijon <pierre@marijon.fr>"]
edition = "2021"
description = "Prompt COuNter, a short kmer counter."
rust-version = "1.65"

homepage = "https://github.com/natir/pcon"
repository = "https://github.com/natir/pcon"
documentation = "https://natir.github.io/pcon/pcon"

readme = "Readme.md"
license-file = "LICENSE"


[dependencies]
cfg-if         = "1"
cocktail       = { git = "https://github.com/natir/cocktail.git" }
bitvec         = { version = "1" }

# multi-threading management
rayon          = { version = "1", optional = true }

# CLI management
clap           = { version = "4", features = ["derive"] }

# Error management
thiserror      = { version = "1" }
anyhow         = { version = "1"}

# Logging and error management
log            = { version = "0.4" }
stderrlog      = { version = "0.5" }

# IO management
niffler        = { version = "2" }
noodles        = { version = "0.31", features = ["fasta"] }
flate2         = { version = "1" }

[dev-dependencies]
criterion      = { version = "0.4" }
tempfile       = { version = "3" }


[features]
parallel = ["dep:rayon"]


[profile.release]
lto = 'thin'
opt-level = 3
overflow-checks = false
panic = 'abort'
incremental = false


[profile.profiling]
inherits = "release"
debug = true