[package]
name = "pcon"
version = "0.1.0"
authors = ["Pierre Marijon <pierre@marijon.fr>"]
edition = "2021"
description = "Prompt COuNter, a short kmer counter."
rust-version = "1.74"

homepage = "https://github.com/natir/pcon"
repository = "https://github.com/natir/pcon"
documentation = "https://natir.github.io/pcon/pcon"

readme = "Readme.md"
license-file = "LICENSE"


[dependencies]
cfg-if         = "1"
cocktail       = { git = "https://github.com/natir/cocktail.git" }
bitvec         = { version = "1" }

# multi-threading management
rayon          = { version = "1", optional = true }

# CLI management
clap           = { version = "4", features = ["derive"] }

# Error management
thiserror      = { version = "1" }
anyhow         = { version = "1"}

# Logging and error management
log            = { version = "0.4" }
stderrlog      = { version = "0.6" }

# IO management
niffler        = { version = "2" }
noodles        = { version = "0.73", features = ["fasta"] }
flate2         = { version = "1" }
byteorder      = { version = "1" }
kff            = { version = "0.9", optional = true }


[dev-dependencies]
criterion      = { version = "0.5" }
tempfile       = { version = "3" }
rand           = { version = "0.8" }
assert_cmd     = { version = "2" }


[features]
default   = ["count_u8"]
parallel  = ["dep:rayon"]
kff       = ["dep:kff"]
fastq     = ["noodles/fastq"]

count_u8  = []
count_u16 = []
count_u32 = []
count_u64 = []


[profile.release]
lto = 'thin'
opt-level = 3
overflow-checks = false
panic = 'abort'
incremental = false


[profile.profiling]
inherits = "release"
debug = true